# PipeFeed

./: .gitignore  .project  PipeFeed.cabal  README.md  feeds.config
src/: Config.hs  PipeFeed.hs  Transforms.hs  Types.hs  Util.hs
