name:           PipeFeed
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Barry Corrigan

executable PipeFeed
  hs-source-dirs:  src
  main-is:         PipeFeed.hs
  build-depends:   
                   base >= 4,
                   configurator >=0.2 && <0.3,
                   text >=0.11.3 && <0.12,
                   network >=2.4.1 && <2.5,
                   HTTP >=4000.2.8 && <4000.3,
                   regex-tdfa >=1.1.8 && <1.2,
                   feed >=0.3.9 && <0.4
  ghc-options:     -fglasgow-exts
  extensions:      
                   NoMonomorphismRestriction, 
                   OverloadedStrings
  other-modules:   
                   Config,
                   Transforms,
                   Types

