name:           PipeFeed
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Barry Corrigan

executable PipeFeed
  hs-source-dirs:  src
  main-is:         PipeFeed.hs
  build-depends:   
                   base >= 4,
                   configurator >=0.2 && <0.3,
                   text >=0.11.3 && <0.12,
                   regex-tdfa >=1.1.8 && <1.2,
                   feed >=0.3.9 && <0.4,
                   hashable >=1.2.0 && <1.3,
                   directory >=1.2.0 && <1.3,
                   strict >=0.3.2 && <0.4,
                   xml >=1.3.13 && <1.4,
                   HTTP >=4000.2.8 && <4000.3,
                   network >=2.4.1 && <2.5
  ghc-options:     -fglasgow-exts
  extensions:      
                   NoMonomorphismRestriction, 
                   OverloadedStrings
  other-modules:   
                   Config,
                   Transforms,
                   Types,
                   Util

